<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SevenEight" >

    <!-- HUKUM -->

    <TextView
        android:id="@+id/hukumLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="2dp"
        android:text="@string/hukum_label"
        android:textColor="@android:color/black"
        android:textStyle="bold" >
    </TextView>

    <ImageView
        android:id="@+id/hukum"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@id/hukumLabel" >
    <!-- android:src="@drawable/spade"/> -->
    </ImageView>


    <!-- SCORE BOARD -->

    <LinearLayout
        android:id="@+id/scoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" >

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="2dp"
            android:text="@string/score_label"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/machineScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_zero"
            android:textColor="#7A0F0F"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humanScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_zero"
            android:textColor="#4588b4"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/machinePlayerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreBoard"
        android:layout_centerHorizontal="true"
        android:text="@string/machine_player_name"
        android:textColor="#7A0F0F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/machinePlayerHandsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/machinePlayerNameLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/hands"
        android:textColor="#7A0F0F"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/machinePlayerHandsScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/machinePlayerNameLabel"
        android:layout_toRightOf="@id/machinePlayerHandsLabel"
        android:text="@string/score_zero"
        android:textColor="#7A0F0F"
        android:textStyle="bold" />

    <!-- MACHINE PLAYER CARDS -->
    <!-- Cards in hand -->

    <RelativeLayout
        android:id="@+id/machinePlayerHandCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/machinePlayerHandsLabel"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/mHandCard1"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="2dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mHandCard2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@id/mHandCard1"
            android:layout_alignTop="@id/mHandCard1"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mHandCard3"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@id/mHandCard2"
            android:layout_alignTop="@id/mHandCard2"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mHandCard4"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@id/mHandCard3"
            android:layout_alignTop="@id/mHandCard3"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mHandCard5"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignLeft="@id/mHandCard4"
            android:layout_alignTop="@id/mHandCard4"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back1" >
        </ImageView>
    </RelativeLayout>

    <!-- Cards on table (folded) -->

    <LinearLayout
        android:id="@+id/machinePlayerBackTableCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/machinePlayerHandCards"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/mTableCard1"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard3"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard4"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard5"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>
    </LinearLayout>

    <!-- Cards on table (open) -->

    <LinearLayout
        android:id="@+id/machinePlayerOpenTableCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/machinePlayerBackTableCards"
        android:layout_alignTop="@id/machinePlayerBackTableCards"
        android:paddingLeft="3dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/mTableCard6"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_1" -->
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard7"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_2" > -->
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard8"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_3" > -->
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard9"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_4" > -->
        </ImageView>

        <ImageView
            android:id="@+id/mTableCard10"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_5" > -->
        </ImageView>
    </LinearLayout>

    <!-- PLAYED CARDS -->

    <RelativeLayout
        android:id="@+id/playedCards"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/machinePlayerBackTableCards"
        android:layout_centerInParent="true"
        android:paddingBottom="30dp"
        android:paddingTop="30dp" >

        <ImageView
            android:id="@+id/pCard1"
            android:layout_width="50dp"
            android:layout_height="70dp" >

            <!-- android:src="@drawable/s_k" -->
        </ImageView>

        <ImageView
            android:id="@+id/pCard2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true" >

            <!-- android:src="@drawable/s_2" -->
        </ImageView>
    </RelativeLayout>

    <!-- HUMAN PLAYER CARDS -->
    <!-- Cards on table (folded) -->

    <LinearLayout
        android:id="@+id/humanPlayerBackTableCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playedCards"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/hTableCard1"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard3"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard4"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard5"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip"
            android:src="@drawable/back1" >
        </ImageView>
    </LinearLayout>

    <!-- Cards on table (open) -->

    <LinearLayout
        android:id="@+id/humanPlayerOpenTableCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/humanPlayerBackTableCards"
        android:layout_alignTop="@id/humanPlayerBackTableCards"
        android:paddingLeft="3dp"
        android:paddingTop="5dp" >

        <ImageView
            android:id="@+id/hTableCard6"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_6" > -->
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard7"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_7" > -->
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard8"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_8" > -->
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard9"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_9" > -->
        </ImageView>

        <ImageView
            android:id="@+id/hTableCard10"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="3dip" >

            <!-- android:src="@drawable/h_t" > -->
        </ImageView>
    </LinearLayout>

    <!-- Cards in hand -->

    <LinearLayout
        android:id="@+id/humanPlayerHandCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humanPlayerOpenTableCards"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/hHandCard1"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            android:src="@drawable/c_1" >
        </ImageView>

        <ImageView
            android:id="@+id/hHandCard2"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            android:src="@drawable/c_2" >
        </ImageView>

        <ImageView
            android:id="@+id/hHandCard3"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            android:src="@drawable/c_3" >
        </ImageView>

        <ImageView
            android:id="@+id/hHandCard4"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            android:src="@drawable/c_4" >
        </ImageView>

        <ImageView
            android:id="@+id/hHandCard5"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_margin="1dp"
            android:src="@drawable/c_5" >
        </ImageView>
    </LinearLayout>

    <TextView
        android:id="@+id/humanPlayerNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humanPlayerHandCards"
        android:layout_centerHorizontal="true"
        android:text="@string/human_player_name"
        android:textColor="#4588b4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/humanPlayerHandsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humanPlayerNameLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/hands"
        android:textColor="#4588b4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/humanPlayerHandsScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humanPlayerNameLabel"
        android:layout_toRightOf="@id/humanPlayerHandsLabel"
        android:text="@string/score_zero"
        android:textColor="#4588b4"
        android:textStyle="bold" />

</RelativeLayout>